package it.polimi.ingsw;

public class AssistantCard extends Card {
    private int value;
    private int movement;
}
