package it.polimi.ingsw;

public abstract class Card {

}
