package it.polimi.ingsw;

public class CharacterCard {
    private Color color;
}
