package it.polimi.ingsw;

public class Cloud extends Board {
    public Cloud() {

    }
}
