package it.polimi.ingsw.model;

public class Island extends Board {
    public Island() {

    }

    Player getInfluencer() {
        return null;
    }
}
