package it.polimi.ingsw.model;

public class MotherNature {
    private Island position;

    public MotherNature(Island position){
        this.position = position;
    }

    public Island getPosition() {
        return position;
    }

    public void setPosition(Island position) {
        this.position = position;
    }
}
