package it.polimi.ingsw.model;

public class School extends Board {
    private Player owner;

    public School() {

    }

    public Player getOwner() {
        return null;
    }
}
