@startuml initial_uml
!theme vibrant
skinparam Linetype polyline
skinparam Linetype ortho

package model <<Folder>> {
    enum Color {
        YELLOW
        BLUE
        GREEN
        RED
        PINK
    }

    enum TowerColor {
        WHITE
        GRAY
        BLACK
    }

    class Game {
        - ArrayList<Player> playerOrder
        + <<constructor>>Game()
        + void round()
        + void addPlayer(Player player)
    }

    abstract class Board {
        ~ int ID
        + ArrayList<Student> getStudentOnBoard()
        + int getID()
    }
    
    abstract class Pawn {
        - Board position
        + Board getPosition()
        + void setPosition(Board newPosition)
    }

    abstract class Card

    class Player {
        - String nickname
        + <<constructor>>Player(String nickname)
        + String getNickname()
    }

    class Island {
        - Tower tower
        + Player getInfluencer()
        + int getNumStudentsByColor(Color color)
        + void setTower()
        + Tower getTower()
    }
    
    class School {
        - Player owner
        + Player getOwner()
    }

    class Cloud {
    }

    class Professor {
        - Color color
    }

    class Student {
        - Color color
    }

    class Tower {
        - TowerColor color
    }

    class MotherNature

    class AssistantCard {
        - int value
        - int movement
    }

    class CharacterCard {
        - CharacterCardEffect effect
    }

    class Deck {
        - ArrayList<Card> cardArrayList
        + <<constructor>>Deck(ArrayList<Card> cardArrayList)
        + Card extractCard()
    }

    class Coin {
        - CharacterCard card
        + CharacterCard getCard()
    }

    class NoEntryTile {
        - Island island
        + Island getPosition()
    }

    NoEntryTile -UP-> Island
    Coin -RIGHT-> CharacterCard

    Card <|-DOWN- AssistantCard
    Card <|-- CharacterCard

    Board <|-DOWN- Island
    Board <|-DOWN- Cloud
    Board <|-DOWN- School
    Board <-RIGHT-- Pawn

    Pawn <|-- Professor
    Pawn <|-- Student
    Pawn <|-- Tower
    Pawn <|-- MotherNature

    Deck *-- Card
    Deck <-UP- Player

    Game --> Player
    Game --> Board
    Game --> Pawn
    
    Color <.UP. Professor
    Color <.UP. Student

    TowerColor <.UP. Tower
}

@enduml